// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseCard Snapshot Tests matches snapshot with default props 1`] = `
<div
  class="group rounded-2xl border bg-card overflow-hidden hover:shadow-lg transition-all flex flex-col"
  data-testid="course-card"
>
  <div
    class="aspect-video bg-gradient-to-br from-primary/20 via-accent/20 to-primary/10 flex items-center justify-center relative overflow-hidden"
  >
    <div
      class="absolute inset-0 bg-gradient-to-br from-primary/5 to-accent/5 opacity-0 group-hover:opacity-100 transition-opacity"
    />
    <svg
      class="lucide lucide-book-open h-16 w-16 text-primary relative z-10"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 7v14"
      />
      <path
        d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
      />
    </svg>
  </div>
  <div
    class="p-6 flex flex-col flex-1"
  >
    <div
      class="mb-4"
    >
      <div
        class="flex items-start justify-between gap-2 mb-2"
      >
        <h3
          class="text-xl font-semibold leading-tight"
        >
          Test Course
        </h3>
        <span
          class="px-2 py-1 rounded-full text-xs font-medium border bg-primary/10 text-primary border-primary/20"
        >
          middle
        </span>
      </div>
      <p
        class="text-sm font-medium text-primary"
      >
        Mathematics
      </p>
    </div>
    <p
      class="text-sm text-muted-foreground mb-4 line-clamp-2"
    />
    <div
      class="mt-auto"
    >
      <div
        class="grid grid-cols-2 gap-3 mb-4 text-sm"
      >
        <div
          class="flex items-center gap-2 text-muted-foreground"
        >
          <svg
            class="lucide lucide-award h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m15.477 12.89 1.515 8.526a.5.5 0 0 1-.81.47l-3.58-2.687a1 1 0 0 0-1.197 0l-3.586 2.686a.5.5 0 0 1-.81-.469l1.514-8.526"
            />
            <circle
              cx="12"
              cy="8"
              r="6"
            />
          </svg>
          <span />
        </div>
        <div
          class="flex items-center gap-2 text-muted-foreground"
        >
          <svg
            class="lucide lucide-clock h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
          <span />
        </div>
        <div
          class="flex items-center gap-2 text-muted-foreground"
        >
          <svg
            class="lucide lucide-info h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 16v-4"
            />
            <path
              d="M12 8h.01"
            />
          </svg>
          <span>
             items
          </span>
        </div>
        <div
          class="flex items-center gap-2 text-muted-foreground"
        >
          <span
            class="text-xs"
          >
            v
          </span>
        </div>
      </div>
      <div
        class="flex gap-2"
      >
        <a
          class="flex-1"
          href="/play/test-course-123/welcome"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-11 rounded-md px-8 w-full group/btn"
          >
            <svg
              class="lucide lucide-play h-4 w-4 mr-2 group-hover/btn:scale-110 transition-transform"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="6 3 20 12 6 21 6 3"
              />
            </svg>
            Play Course
          </button>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`CourseCard Snapshot Tests matches snapshot with different difficulty 1`] = `
<div
  class="group rounded-2xl border bg-card overflow-hidden hover:shadow-lg transition-all flex flex-col"
  data-testid="course-card"
>
  <div
    class="aspect-video bg-gradient-to-br from-primary/20 via-accent/20 to-primary/10 flex items-center justify-center relative overflow-hidden"
  >
    <div
      class="absolute inset-0 bg-gradient-to-br from-primary/5 to-accent/5 opacity-0 group-hover:opacity-100 transition-opacity"
    />
    <svg
      class="lucide lucide-book-open h-16 w-16 text-primary relative z-10"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 7v14"
      />
      <path
        d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
      />
    </svg>
  </div>
  <div
    class="p-6 flex flex-col flex-1"
  >
    <div
      class="mb-4"
    >
      <div
        class="flex items-start justify-between gap-2 mb-2"
      >
        <h3
          class="text-xl font-semibold leading-tight"
        >
          Test Course
        </h3>
        <span
          class="px-2 py-1 rounded-full text-xs font-medium border bg-primary/10 text-primary border-primary/20"
        >
          elementary
        </span>
      </div>
      <p
        class="text-sm font-medium text-primary"
      >
        Mathematics
      </p>
    </div>
    <p
      class="text-sm text-muted-foreground mb-4 line-clamp-2"
    />
    <div
      class="mt-auto"
    >
      <div
        class="grid grid-cols-2 gap-3 mb-4 text-sm"
      >
        <div
          class="flex items-center gap-2 text-muted-foreground"
        >
          <svg
            class="lucide lucide-award h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m15.477 12.89 1.515 8.526a.5.5 0 0 1-.81.47l-3.58-2.687a1 1 0 0 0-1.197 0l-3.586 2.686a.5.5 0 0 1-.81-.469l1.514-8.526"
            />
            <circle
              cx="12"
              cy="8"
              r="6"
            />
          </svg>
          <span />
        </div>
        <div
          class="flex items-center gap-2 text-muted-foreground"
        >
          <svg
            class="lucide lucide-clock h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
          <span />
        </div>
        <div
          class="flex items-center gap-2 text-muted-foreground"
        >
          <svg
            class="lucide lucide-info h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 16v-4"
            />
            <path
              d="M12 8h.01"
            />
          </svg>
          <span>
             items
          </span>
        </div>
        <div
          class="flex items-center gap-2 text-muted-foreground"
        >
          <span
            class="text-xs"
          >
            v
          </span>
        </div>
      </div>
      <div
        class="flex gap-2"
      >
        <a
          class="flex-1"
          href="/play/test-course-123/welcome"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-11 rounded-md px-8 w-full group/btn"
          >
            <svg
              class="lucide lucide-play h-4 w-4 mr-2 group-hover/btn:scale-110 transition-transform"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="6 3 20 12 6 21 6 3"
              />
            </svg>
            Play Course
          </button>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`CourseCard Snapshot Tests matches snapshot with long title 1`] = `
<div
  class="group rounded-2xl border bg-card overflow-hidden hover:shadow-lg transition-all flex flex-col"
  data-testid="course-card"
>
  <div
    class="aspect-video bg-gradient-to-br from-primary/20 via-accent/20 to-primary/10 flex items-center justify-center relative overflow-hidden"
  >
    <div
      class="absolute inset-0 bg-gradient-to-br from-primary/5 to-accent/5 opacity-0 group-hover:opacity-100 transition-opacity"
    />
    <svg
      class="lucide lucide-book-open h-16 w-16 text-primary relative z-10"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 7v14"
      />
      <path
        d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
      />
    </svg>
  </div>
  <div
    class="p-6 flex flex-col flex-1"
  >
    <div
      class="mb-4"
    >
      <div
        class="flex items-start justify-between gap-2 mb-2"
      >
        <h3
          class="text-xl font-semibold leading-tight"
        >
          Very Long Course Title That Might Wrap to Multiple Lines
        </h3>
        <span
          class="px-2 py-1 rounded-full text-xs font-medium border bg-primary/10 text-primary border-primary/20"
        >
          middle
        </span>
      </div>
      <p
        class="text-sm font-medium text-primary"
      >
        Mathematics
      </p>
    </div>
    <p
      class="text-sm text-muted-foreground mb-4 line-clamp-2"
    />
    <div
      class="mt-auto"
    >
      <div
        class="grid grid-cols-2 gap-3 mb-4 text-sm"
      >
        <div
          class="flex items-center gap-2 text-muted-foreground"
        >
          <svg
            class="lucide lucide-award h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m15.477 12.89 1.515 8.526a.5.5 0 0 1-.81.47l-3.58-2.687a1 1 0 0 0-1.197 0l-3.586 2.686a.5.5 0 0 1-.81-.469l1.514-8.526"
            />
            <circle
              cx="12"
              cy="8"
              r="6"
            />
          </svg>
          <span />
        </div>
        <div
          class="flex items-center gap-2 text-muted-foreground"
        >
          <svg
            class="lucide lucide-clock h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
          <span />
        </div>
        <div
          class="flex items-center gap-2 text-muted-foreground"
        >
          <svg
            class="lucide lucide-info h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 16v-4"
            />
            <path
              d="M12 8h.01"
            />
          </svg>
          <span>
             items
          </span>
        </div>
        <div
          class="flex items-center gap-2 text-muted-foreground"
        >
          <span
            class="text-xs"
          >
            v
          </span>
        </div>
      </div>
      <div
        class="flex gap-2"
      >
        <a
          class="flex-1"
          href="/play/test-course-123/welcome"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-11 rounded-md px-8 w-full group/btn"
          >
            <svg
              class="lucide lucide-play h-4 w-4 mr-2 group-hover/btn:scale-110 transition-transform"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="6 3 20 12 6 21 6 3"
              />
            </svg>
            Play Course
          </button>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`CourseCard Snapshot Tests matches snapshot with skill focus 1`] = `
<div
  class="group rounded-2xl border bg-card overflow-hidden hover:shadow-lg transition-all flex flex-col"
  data-testid="course-card"
>
  <div
    class="aspect-video bg-gradient-to-br from-primary/20 via-accent/20 to-primary/10 flex items-center justify-center relative overflow-hidden"
  >
    <div
      class="absolute inset-0 bg-gradient-to-br from-primary/5 to-accent/5 opacity-0 group-hover:opacity-100 transition-opacity"
    />
    <svg
      class="lucide lucide-book-open h-16 w-16 text-primary relative z-10"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 7v14"
      />
      <path
        d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
      />
    </svg>
  </div>
  <div
    class="p-6 flex flex-col flex-1"
  >
    <div
      class="mb-4"
    >
      <div
        class="flex items-start justify-between gap-2 mb-2"
      >
        <h3
          class="text-xl font-semibold leading-tight"
        >
          Test Course
        </h3>
        <span
          class="px-2 py-1 rounded-full text-xs font-medium border bg-primary/10 text-primary border-primary/20"
        >
          middle
        </span>
      </div>
      <p
        class="text-sm font-medium text-primary"
      >
        Mathematics
      </p>
    </div>
    <p
      class="text-sm text-muted-foreground mb-4 line-clamp-2"
    />
    <div
      class="mt-auto"
    >
      <div
        class="grid grid-cols-2 gap-3 mb-4 text-sm"
      >
        <div
          class="flex items-center gap-2 text-muted-foreground"
        >
          <svg
            class="lucide lucide-award h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m15.477 12.89 1.515 8.526a.5.5 0 0 1-.81.47l-3.58-2.687a1 1 0 0 0-1.197 0l-3.586 2.686a.5.5 0 0 1-.81-.469l1.514-8.526"
            />
            <circle
              cx="12"
              cy="8"
              r="6"
            />
          </svg>
          <span />
        </div>
        <div
          class="flex items-center gap-2 text-muted-foreground"
        >
          <svg
            class="lucide lucide-clock h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
          <span />
        </div>
        <div
          class="flex items-center gap-2 text-muted-foreground"
        >
          <svg
            class="lucide lucide-info h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 16v-4"
            />
            <path
              d="M12 8h.01"
            />
          </svg>
          <span>
             items
          </span>
        </div>
        <div
          class="flex items-center gap-2 text-muted-foreground"
        >
          <span
            class="text-xs"
          >
            v
          </span>
        </div>
      </div>
      <div
        class="flex gap-2"
      >
        <a
          class="flex-1"
          href="/play/test-course-123/welcome?skillFocus=skill-123"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-11 rounded-md px-8 w-full group/btn"
          >
            <svg
              class="lucide lucide-play h-4 w-4 mr-2 group-hover/btn:scale-110 transition-transform"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="6 3 20 12 6 21 6 3"
              />
            </svg>
            Start Practice
          </button>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`CourseCard Snapshot Tests matches snapshot with unpublished course 1`] = `
<div
  class="group rounded-2xl border bg-card overflow-hidden hover:shadow-lg transition-all flex flex-col"
  data-testid="course-card"
>
  <div
    class="aspect-video bg-gradient-to-br from-primary/20 via-accent/20 to-primary/10 flex items-center justify-center relative overflow-hidden"
  >
    <div
      class="absolute inset-0 bg-gradient-to-br from-primary/5 to-accent/5 opacity-0 group-hover:opacity-100 transition-opacity"
    />
    <svg
      class="lucide lucide-book-open h-16 w-16 text-primary relative z-10"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 7v14"
      />
      <path
        d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
      />
    </svg>
  </div>
  <div
    class="p-6 flex flex-col flex-1"
  >
    <div
      class="mb-4"
    >
      <div
        class="flex items-start justify-between gap-2 mb-2"
      >
        <h3
          class="text-xl font-semibold leading-tight"
        >
          Test Course
        </h3>
        <span
          class="px-2 py-1 rounded-full text-xs font-medium border bg-primary/10 text-primary border-primary/20"
        >
          middle
        </span>
      </div>
      <p
        class="text-sm font-medium text-primary"
      >
        Mathematics
      </p>
    </div>
    <p
      class="text-sm text-muted-foreground mb-4 line-clamp-2"
    />
    <div
      class="mt-auto"
    >
      <div
        class="grid grid-cols-2 gap-3 mb-4 text-sm"
      >
        <div
          class="flex items-center gap-2 text-muted-foreground"
        >
          <svg
            class="lucide lucide-award h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m15.477 12.89 1.515 8.526a.5.5 0 0 1-.81.47l-3.58-2.687a1 1 0 0 0-1.197 0l-3.586 2.686a.5.5 0 0 1-.81-.469l1.514-8.526"
            />
            <circle
              cx="12"
              cy="8"
              r="6"
            />
          </svg>
          <span />
        </div>
        <div
          class="flex items-center gap-2 text-muted-foreground"
        >
          <svg
            class="lucide lucide-clock h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
          <span />
        </div>
        <div
          class="flex items-center gap-2 text-muted-foreground"
        >
          <svg
            class="lucide lucide-info h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 16v-4"
            />
            <path
              d="M12 8h.01"
            />
          </svg>
          <span>
             items
          </span>
        </div>
        <div
          class="flex items-center gap-2 text-muted-foreground"
        >
          <span
            class="text-xs"
          >
            v
          </span>
        </div>
      </div>
      <div
        class="flex gap-2"
      >
        <a
          class="flex-1"
          href="/play/test-course-123/welcome"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-11 rounded-md px-8 w-full group/btn"
          >
            <svg
              class="lucide lucide-play h-4 w-4 mr-2 group-hover/btn:scale-110 transition-transform"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="6 3 20 12 6 21 6 3"
              />
            </svg>
            Play Course
          </button>
        </a>
      </div>
    </div>
  </div>
</div>
`;
